--- a/index.html
+++ b/index.html
@@ -36,28 +36,28 @@
     </div>
   </nav>
   <section id="profile">
-    <div class="section__pic-container">
-      <img src="./assets/profile-pic.png" alt="Norine profile picture">
+    <div class="section-pic-container">
+      <img src="./assets/profile-pic.jpg" alt="Profile Picture" class="profile-pic">
     </div>
-    <div class="section__text">
-      <p class="section__text__p1">Hello, I'm <h1 class="title">Norine Oo</h1></p>
-      <p class="section__text__p2">Fullstack developer</p>
+    <div class="section-text">
+      <p class="section-text-p1">Hello, I'm <h1 class="title">Norine Oo</h1></p>
+      <p class="section-text-p2">Full Stack Developer</p>
       <div class="btn-container">
         <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
         <div id="socials-container">
-          <img src="./assets/linkedin.png" alt="My Linkedin profile" class="icon" onclick="location.href='https://linkedin.com/'">
-          <img src="./assets/github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com/'">
+          <img src="./assets/github.png" alt="Github Profile" class="icon" onclick="window.open('https://github.com/milainmaroo', '_blank')">
+          <img src="./assets/medium.png" alt="Medium Profile" class="icon medium-icon" onclick="window.open('https://medium.com/@norineoo', '_blank')">
         </div>
       </div>
     </div>
   </section>
   <section id="about">
-    <p class="section__text__p1">Get To Know More</p>
-    <h1 class="section__text__p1">About Me</h1>
+    <p class="section-text-p1">Get To Know More</p>
+    <h1 class="title">About Me</h1>
     <div class="section-container">
-      <div class="section__pic-container">
-        <img src="./assets/about-pic.png" alt="Profile picture" class="about-pic" />
+      <div class="section-pic-container">
+        <img src="./assets/about-pic.jpeg" alt="About Picture" class="about-pic" />
       </div>
       <div class="about-details-container">
         <div class="about-containers">
@@ -69,7 +69,7 @@
           <div class="details-container">
             <img src="./assets/education.png" alt="education icon" class="icon" />
             <h3>Education</h3>
-            <p>Bachelor of Business(Information Technology & Marketing major)<br />Master of Information Technology</p>
+            <p>Bachelor of Business <br />(IT & Marketing major)<br />Master of Information Technology <br />(Software Development)</p>
           </div>
         </div>
         <div class="text-container">
@@ -80,7 +80,7 @@
     <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#experience'" />
   </section>
   <section id="experience">
-    <p class="section__text__p1">Explore My</p>
+    <p class="section-text-p1">Explore My</p>
     <h1 class="title">Experience</h1>
     <div class="experience-details-container">
       <div class="about-containers">
@@ -169,7 +169,7 @@
     <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
   </section>
   <section id="projects">
-    <p class="section__text__p1">Browse My Recent</p>
+    <p class="section-text-p1">Browse My Recent</p>
     <h1 class="title">Projects</h1>
     <div class="experience-details-container">
       <div class="about-containers">
@@ -220,16 +220,12 @@
     <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
   </section>
   <section id="contact">
-    <p class="section__text__p1">Get in Touch</p>
+    <p class="section-text-p1">Get in Touch</p>
     <h1 class="title">Contact Me</h1>
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
         <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon">
-        <p><a href="mailto:examplemail@gmail.com">norineoo13@gmail.com</a></p>
-      </div>
-      <div class="contact-info-container">
-        <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon">
-        <p><a href="https://www.linkedin">LinkedIn</a></p>
+        <p><a href="mailto:norineoo13@gmail.com">norineoo13@gmail.com</a></p>
       </div>
     </div>
   </section>
