--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="mediaqueries.css">
-  <title>My Portfolio</title>
+  <title>Norine Oo | Portfolio</title>
 </head>
 <body>
   <nav id="desktop-nav">
@@ -179,10 +179,10 @@
         </div>
         <h2 class="experience-sub-title project-title">Project One</h2>
         <div class="btn-container">
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+          <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/milainmaroo/blackrose_book_publisher', '_blank')">
             Github
           </button>
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+          <button class="btn btn-color-2 project-btn" onclick="window.open('https://black-rose-publishing.netlify.app/', '_blank')">
             Live Demo
           </button>
         </div>
@@ -240,7 +240,7 @@
         </ul>
       </div>
     </nav>
-    <p>Copyright &#169; 2024 Norine Oo. All Rights Reserved.</p>
+    <p>Copyright &copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> Norine Oo. All Rights Reserved.</p>
   </footer>
   <script src="script.js"></script>
 </body>
