Modify some paragraphs and css

--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
   </nav>
   <section id="profile">
     <div class="section-pic-container">
-      <img src="./assets/profile-pic.jpg" alt="Profile Picture" class="profile-pic">
+      <img src="./resources/profile-pic.jpg" alt="Profile Picture" class="profile-pic">
     </div>
     <div class="section-text">
       <p class="section-text-p1">Hello, I'm <h1 class="title">Norine Oo</h1></p>
       <p class="section-text-p2">Full Stack Developer</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
+        <button class="btn btn-color-2" onclick="window.open('./resources/resume-example.pdf')">Download CV</button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
         <div id="socials-container">
-          <img src="./assets/github.png" alt="Github Profile" class="icon" onclick="window.open('https://github.com/milainmaroo', '_blank')">
-          <img src="./assets/medium.png" alt="Medium Profile" class="icon medium-icon" onclick="window.open('https://medium.com/@norineoo', '_blank')">
+          <img src="./resources/github.png" alt="Github Profile" class="icon" onclick="window.open('https://github.com/milainmaroo', '_blank')">
+          <img src="./resources/medium.png" alt="Medium Profile" class="icon medium-icon" onclick="window.open('https://medium.com/@norineoo', '_blank')">
         </div>
       </div>
     </div>
@@ -57,27 +57,38 @@
     <h1 class="title">About Me</h1>
     <div class="section-container">
       <div class="section-pic-container">
-        <img src="./assets/about-pic.jpeg" alt="About Picture" class="about-pic" />
+        <img src="./resources/about-pic.jpeg" alt="About Picture" class="about-pic" />
       </div>
       <div class="about-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <img src="./assets/experience.png" alt="experience icon" class="icon" />
+            <img src="./resources/experience.png" alt="experience icon" class="icon" />
             <h3>Experience</h3>
             <p>2+ years <br />Frontend Development</p>
           </div>
           <div class="details-container">
-            <img src="./assets/education.png" alt="education icon" class="icon" />
+            <img src="./resources/education.png" alt="education icon" class="icon" />
             <h3>Education</h3>
             <p>Bachelor of Business <br />(IT & Marketing major)<br />Master of Information Technology <br />(Software Development)</p>
           </div>
         </div>
         <div class="text-container">
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga, ratione adipisci nesciunt dignissimos consequatur eveniet perferendis unde, delectus quaerat ea deserunt aliquid ut explicabo! Minima iusto quo non quae dolorem necessitatibus quis ut dolores sequi asperiores voluptatem in doloribus corporis rem perspiciatis repellendus corrupti est rerum, quisquam eius! Neque, distinctio!</p>
+          <p>
+            I have previous experiences in designing and developing applications as part of my university projects 
+            and while performing an internship as a software developer. 
+            I am a self-motivated learner and with good communication and interpersonal skills with individuals at all levels and backgrounds,
+            I'm able to multitask, prioritise and execute tasks effectively 
+            in a high-pressure environment. I have a strong ability in developing full stack applications
+            as well as excellent teamwork and problem-solving skills to implement successful projects.</p> <br> 
+            <p>If I have to describe myself in three words, it would be: hardworking, creative and flexible. <br /><br />
+            My favourite quote I live my life by is from the English author, <b>Matt Haig</b>: </p>
+            <p><b><i>"If you aim to be something you are not, you will always fail. Aim to be the truest version of you, Embrace that you-ness. 
+              Endorse it. Love it. Work hard at it."</i> - The Midnight Library</b></p><br>
+            <p>Besides my passion on coding, I love to write programming articles on Medium in my spare time and go for a run in the early morning.</p>
         </div>
       </div>
     </div>
-    <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#experience'" />
+    <img src="./resources/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#experience'" />
   </section>
   <section id="experience">
     <p class="section-text-p1">Explore My</p>
@@ -88,44 +99,44 @@
           <h2 class="experience-sub-title">Frontend Development</h2>
           <div class="article-container">
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./resources/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>HTML</h3>
                 <p>Experienced</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./resources/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>CSS</h3>
                 <p>Experienced</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./resources/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>JavaScript</h3>
                 <p>Experienced</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./resources/checkmark.png" alt="Experience icon" class="icon">
               <div>
-                <h3>SASS</h3>
+                <h3>React</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./resources/checkmark.png" alt="Experience icon" class="icon">
               <div>
-                <h3>TypeScript</h3>
+                <h3>Redux</h3>
                 <p>Basic</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./resources/checkmark.png" alt="Experience icon" class="icon">
               <div>
-                <h3>Material UI</h3>
+                <h3>Bootstrap</h3>
                 <p>Intermediate</p>
               </div>
             </article>
@@ -135,28 +146,42 @@
           <h2 class="experience-sub-title">Backend Development</h2>
           <div class="article-container">
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./resources/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>PostgreSQL</h3>
                 <p>Basic</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./resources/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>Node JS</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./resources/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>Express JS</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+              <img src="./resources/checkmark.png" alt="Experience icon" class="icon">
+              <div>
+                <h3>MongoDB</h3>
+                <p>Intermediate</p>
+              </div>
+            </article>
+            <article>
+              <img src="./resources/checkmark.png" alt="Experience icon" class="icon">
+              <div>
+                <h3>REST API</h3>
+                <p>Intermediate</p>
+              </div>
+            </article>
+            <article>
+              <img src="./resources/checkmark.png" alt="Experience icon" class="icon">
               <div>
                 <h3>Git</h3>
                 <p>Intermediate</p>
@@ -166,7 +191,7 @@
         </div>
       </div>
     </div>
-    <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
+    <img src="./resources/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
   </section>
   <section id="projects">
     <p class="section-text-p1">Browse My Recent</p>
@@ -175,7 +200,7 @@
       <div class="about-containers">
       <div class="details-container color-container">
         <div class="article-container">
-          <img src="./assets/project-1.png" alt="Project 1" class="project-img">
+          <img src="./resources/project-1.png" alt="Project 1" class="project-img">
         </div>
         <h2 class="experience-sub-title project-title">Project One</h2>
         <div class="btn-container">
@@ -189,7 +214,7 @@
       </div>
       <div class="details-container color-container">
         <div class="article-container">
-          <img src="./assets/project-2.png" alt="Project 2" class="project-img">
+          <img src="./resources/project-2.png" alt="Project 2" class="project-img">
         </div>
         <h2 class="experience-sub-title project-title">Project Two</h2>
         <div class="btn-container">
@@ -203,7 +228,7 @@
       </div>
       <div class="details-container color-container">
         <div class="article-container">
-          <img src="./assets/project-3.png" alt="Project 3" class="project-img">
+          <img src="./resources/project-3.png" alt="Project 3" class="project-img">
         </div>
         <h2 class="experience-sub-title project-title">Project Three</h2>
         <div class="btn-container">
@@ -217,14 +242,14 @@
       </div>
     </div>
     </div>
-    <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
+    <img src="./resources/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
   </section>
   <section id="contact">
     <p class="section-text-p1">Get in Touch</p>
     <h1 class="title">Contact Me</h1>
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
-        <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon">
+        <img src="./resources/email.png" alt="Email icon" class="icon contact-icon email-icon">
         <p><a href="mailto:norineoo13@gmail.com">norineoo13@gmail.com</a></p>
       </div>
     </div>
