--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="mediaqueries.css">
+  <link rel="stylesheet" href="media_queries.css">
   <title>Norine Oo | Portfolio</title>
 </head>
 <body>
@@ -61,15 +61,16 @@
       </div>
       <div class="about-details-container">
         <div class="about-containers">
-          <div class="details-container">
+          <!-- <div class="details-container">
             <img src="./resources/experience.png" alt="experience icon" class="icon" />
             <h3>Experience</h3>
-            <p>2+ years <br />Frontend Development</p>
-          </div>
+            <p>1 year <br />Fullstack Development</p>
+          </div> -->
           <div class="details-container">
             <img src="./resources/education.png" alt="education icon" class="icon" />
             <h3>Education</h3>
-            <p>Bachelor of Business <br />(IT & Marketing major)<br />Master of Information Technology <br />(Software Development)</p>
+            <p>Bachelor of Business (Information Technology & Marketing major) </p>
+            <p>Master of Information Technology (Software & the Web)</p>
           </div>
         </div>
         <div class="text-container">
@@ -80,11 +81,11 @@
             I'm able to multitask, prioritise and execute tasks effectively 
             in a high-pressure environment. I have a strong ability in developing full stack applications
             as well as excellent teamwork and problem-solving skills to implement successful projects.</p> <br> 
-            <p>If I have to describe myself in three words, it would be: hardworking, creative and flexible. <br /><br />
-            My favourite quote I live my life by is from the English author, <b>Matt Haig</b>: </p>
+            <p>If I have to describe myself in three words, it would be: hardworking, creative and flexible.
+            <!-- My favourite quote I live my life by is from the English author, <b>Matt Haig</b>: </p>
             <p><b><i>"If you aim to be something you are not, you will always fail. Aim to be the truest version of you, Embrace that you-ness. 
-              Endorse it. Love it. Work hard at it."</i> - The Midnight Library</b></p><br>
-            <p>Besides my passion on coding, I love to write programming articles on Medium in my spare time and go for a run in the early morning.</p>
+              Endorse it. Love it. Work hard at it."</i> - The Midnight Library</b></p><br> -->
+            Besides my passion on coding, I love to write programming articles on Medium in my spare time and go for a run in the early morning.</p>
         </div>
       </div>
     </div>
@@ -198,49 +199,49 @@
     <h1 class="title">Projects</h1>
     <div class="experience-details-container">
       <div class="about-containers">
-      <div class="details-container color-container">
-        <div class="article-container">
-          <img src="./resources/project-1.png" alt="Project 1" class="project-img">
+        <div class="details-container color-container">
+          <div class="article-container project-image">
+            <img src="./resources/project-1.png" alt="Project 1" class="project-img">
+          </div>
+          <h2 class="experience-sub-title project-title">Project One</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/milainmaroo/blackrose_book_publisher', '_blank')">
+              Github
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://black-rose-publishing.netlify.app/', '_blank')">
+              Live Demo
+            </button>
+          </div>
         </div>
-        <h2 class="experience-sub-title project-title">Project One</h2>
-        <div class="btn-container">
-          <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/milainmaroo/blackrose_book_publisher', '_blank')">
-            Github
-          </button>
-          <button class="btn btn-color-2 project-btn" onclick="window.open('https://black-rose-publishing.netlify.app/', '_blank')">
-            Live Demo
-          </button>
+        <div class="details-container color-container">
+          <div class="article-container project-image">
+            <img src="./resources/project-2.png" alt="Project 2" class="project-img">
+          </div>
+          <h2 class="experience-sub-title project-title">Project Two</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+              Github
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+              Live Demo
+            </button>
+          </div>
+        </div>
+        <div class="details-container color-container">
+          <div class="article-container project-image">
+            <img src="./resources/project-3.png" alt="Project 3" class="project-img">
+          </div>
+          <h2 class="experience-sub-title project-title">Project Three</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/milainmaroo/brandtops_shop', '_blank')">
+              Github
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://brandtops-store.netlify.app/', '_blank')">
+              Live Demo
+            </button>
+          </div>
         </div>
       </div>
-      <div class="details-container color-container">
-        <div class="article-container">
-          <img src="./resources/project-2.png" alt="Project 2" class="project-img">
-        </div>
-        <h2 class="experience-sub-title project-title">Project Two</h2>
-        <div class="btn-container">
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
-            Github
-          </button>
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
-            Live Demo
-          </button>
-        </div>
-      </div>
-      <div class="details-container color-container">
-        <div class="article-container">
-          <img src="./resources/project-3.png" alt="Project 3" class="project-img">
-        </div>
-        <h2 class="experience-sub-title project-title">Project Three</h2>
-        <div class="btn-container">
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
-            Github
-          </button>
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
-            Live Demo
-          </button>
-        </div>
-      </div>
-    </div>
     </div>
     <img src="./resources/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
   </section>
