--- a/index.html
+++ b/index.html
@@ -61,31 +61,17 @@
       </div>
       <div class="about-details-container">
         <div class="about-containers">
-          <!-- <div class="details-container">
-            <img src="./resources/experience.png" alt="experience icon" class="icon" />
-            <h3>Experience</h3>
-            <p>1 year <br />Fullstack Development</p>
-          </div> -->
           <div class="details-container">
             <img src="./resources/education.png" alt="education icon" class="icon" />
             <h3>Education</h3>
             <p>Bachelor of Business (Information Technology & Marketing major) </p>
-            <p>Master of Information Technology (Software & the Web)</p>
+            <p>Master of Information Technology (Software & Web Development)</p>
           </div>
         </div>
         <div class="text-container">
-          <p>
-            I have previous experiences in designing and developing applications as part of my university projects 
-            and while performing an internship as a software developer. 
-            I am a self-motivated learner and with good communication and interpersonal skills with individuals at all levels and backgrounds,
-            I'm able to multitask, prioritise and execute tasks effectively 
-            in a high-pressure environment. I have a strong ability in developing full stack applications
-            as well as excellent teamwork and problem-solving skills to implement successful projects.</p> <br> 
-            <p>If I have to describe myself in three words, it would be: hardworking, creative and flexible.
-            <!-- My favourite quote I live my life by is from the English author, <b>Matt Haig</b>: </p>
-            <p><b><i>"If you aim to be something you are not, you will always fail. Aim to be the truest version of you, Embrace that you-ness. 
-              Endorse it. Love it. Work hard at it."</i> - The Midnight Library</b></p><br> -->
-            Besides my passion on coding, I love to write programming articles on Medium in my spare time and go for a run in the early morning.</p>
+          <p>As a self-motivated professional, I bring hands-on experience in designing and developing web applications through university projects and personal initiatives, showcasing my proficiency in creating robust and innovative digital solutions. </p>
+          <p>I possess exceptional communication and interpersonal skills, enabling effective engagement with individuals across diverse levels and backgrounds. I have a strong ability in developing full stack applications as well as excellent teamwork and problem-solving skills to implement successful projects.</p>
+          <p>Beyond my technical pursuits, I channel my creativity into writing programming articles on Medium during my free time and maintain a healthy lifestyle by enjoying early morning runs.</p>
         </div>
       </div>
     </div>
