--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
           </div>
           <h2 class="experience-sub-title project-title">Project Two</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/milainmaroo/workoutbuddy', '_blank')">
               Github
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://workoutbuddy-w7ad.onrender.com/', '_blank')">
               Live Demo
             </button>
           </div>
