--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
           </div>
           <h2 class="experience-sub-title project-title">Project Three</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/milainmaroo/brandtops_shop', '_blank')">
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/milainmaroo/proshop-ecommerce-store', '_blank')">
               Github
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="window.open('https://brandtops-store.netlify.app/', '_blank')">
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://proshop-ecommerce-store.onrender.com/', '_blank')">
               Live Demo
             </button>
           </div>
